#Auto Generated Root CMake file by Flick CLI
#Copyright(c) 2025 None.All rights reerved.
cmake_minimum_required(VERSION 3.6...3.31)
project(dsa-using-cpp VERSION 1.0.0 LANGUAGES CXX)
include(cmake/config.cmake)
#@add_find_package Warning: Do not remove this line
#@add_subproject Warning: Do not remove this line
add_subdirectory(backtracking)
add_subdirectory(dynamic-programming)
add_subdirectory(greedy-method)
add_subdirectory(divide-and-conquer)
add_subdirectory(asymptotic-notations)
add_subdirectory(recursion-relations)
add_subdirectory(graphs)
add_subdirectory(hashing-techniques)
add_subdirectory(sorting-techniques)
add_subdirectory(heap)
add_subdirectory(search-trees)
add_subdirectory(avl-trees)
add_subdirectory(binary-search-trees)
add_subdirectory(matrices)
add_subdirectory(recursion)
add_subdirectory(array-adt)
add_subdirectory(strings)
add_subdirectory(linkedlist)
add_subdirectory(queues)
add_subdirectory(stack)
add_subdirectory(trees)
add_subdirectory(dsa-using-cpp)
